# gnani-vachana

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
gnani/: __init__.py  log.py
gnani/stt/: __init__.py  client.py  exceptions.py
gnani/tts/: __init__.py  client.py  exceptions.py
