[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnani-vachana"
version = "0.7.5"
description = "Python client for Gnani's speech AI platform (STT, TTS, and more)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Genvoice", email = "support@gnani.ai" },
]
keywords = ["stt", "tts", "speech-to-text", "text-to-speech", "gnani", "asr", "transcription", "multilingual", "indian-languages", "realtime", "streaming", "websocket", "sse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "types-requests>=2.28",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://gnani.ai"
Documentation = "https://docs.gnani.ai/"
Repository = "https://github.com/Gnani-AI-Mintlify/Gnani-Vachana"
Issues = "https://github.com/Gnani-AI-Mintlify/Gnani-Vachana/issues"

[tool.hatch.build.targets.wheel]
packages = ["gnani"]

[tool.hatch.build.targets.sdist]
include = ["/gnani"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "UP007",  # allow Union[X, Y] syntax alongside X | Y for py39 compat
    "F601",   # duplicate dict keys in SUPPORTED_LANGUAGES (intentional: REST + stream + auto-detect maps)
    "RUF002", # Devanagari/Unicode chars in docstrings (intentional for Indic language examples)
    "B009",   # getattr with constant attr (used for websockets version compat)
    "TCH003", # stdlib imports in type-checking block (not worth churn)
]

[tool.ruff.lint.isort]
known-first-party = ["gnani"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "integration: marks tests requiring live API (deselect with '-m not integration')",
    "slow: marks slow tests (deselect with '-m not slow')",
    "timeout: per-test timeout in seconds (requires pytest-timeout)",
]

# ---------------------------------------------------------------------------
# Mypy (optional static type-checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
